style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: inherit;
}

:root {
    --orange: #ff8838;
    --blue: #4296a6;
    --key-blue: #399fab;
    --yellow: #ffdc08;
    --purpleish: #ccd0fa;
}

body {
    min-height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--yellow);
    font-family: "Bebas Neue", sans-serif;
}

.calculator {
    background-color: var(--blue);
    display: flex;
    flex-direction: column;
    padding: 20px;
    gap: 20px;
    border-radius: 20px;
    border: 2px solid #1b5157;
    box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
}

.display {
    height: 100px;
    background-color: var(--purpleish);
    padding: 10px;
    display: flex;
    align-items: flex-end;
    justify-content: flex-end;
    border-radius: 20px;
    border: 2px solid #1b5157;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
}

.display .result {
    font-size: 40px;
}

.keyboard {
    display: flex;
    gap: 10px;
}

.keyboard .right {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.keyboard .left {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.keyboard .row {
    display: flex;
    gap: 10px;
}

.keyboard button {
    width: 80px;
    height: 80px;
    border-radius: 20px;
    font-size: 25px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.keyboard #digit-0 {
    width: 170px;
}

.keyboard #equals {
    height: 170px;
}

.keyboard .blue {
    background-color: var(--key-blue);
    color: white;
}

.keyboard .orange {
    background-color: var(--orange);
    color: black;
}

.keyboard .selected {
    background-color: var(--yellow);
}

